--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 10:05:02 2018</p>
+         Last Run: Mon Nov 19 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,36 +32,36 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>67</td>
+                        <td>-3</td>
+                        <td>3</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>20</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>3</td>
-                        <td>68</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>5</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>2</td>
-                        <td>68</td>
+                        <td>3</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>16</td>
                      </tr>
                   </tbody>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
                  "-3",
+                 "-4",
                  "-4"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "0",
+                 "-1",
                  "-1"
                ]
              }
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
                  "3",
-                 "2"
+                 "5",
+                 "3"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "68",
-                 "68"
+                 "69",
+                 "69",
+                 "69"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "20",
-                 "17",
+                 "21",
+                 "18",
                  "16"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 10:05:02 2018</p>
+         Last Run: Mon Nov 19 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,8 +246,8 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>0</td>
                         <td>58</td>
                         <td>0</td>
@@ -260,12 +260,12 @@
                         <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>60</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>63</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>61</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "-2",
                  "-2"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
+                 "3",
                  "2",
                  "2"
                ]
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "1",
+                 "0",
                  "1"
                ]
              },
@@ -388,7 +388,7 @@
                "data":[
                  "58",
                  "60",
-                 "62"
+                 "61"
                ]
              },
              {
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "63",
-                 "63",
-                 "61"
+                 "62",
+                 "60"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 10:05:02 2018</p>
+         Last Run: Mon Nov 19 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -463,24 +463,24 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>3</td>
-                        <td>71</td>
+                        <td>2</td>
+                        <td>68</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>E</td>
-                        <td>46</td>
+                        <td>NW</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-1</td>
                         <td>-5</td>
-                        <td>3</td>
-                        <td>65</td>
+                        <td>2</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>ESE</td>
-                        <td>30</td>
+                        <td>SE</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -488,23 +488,23 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>62</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>20</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>3</td>
-                        <td>62</td>
+                        <td>2</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>ESE</td>
-                        <td>19</td>
+                        <td>SE</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -606,10 +606,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
                  "2",
-                 "3"
+                 "2",
+                 "2",
+                 "2"
                ]
              },
              {
@@ -618,10 +618,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "65",
-                 "62",
-                 "62"
+                 "68",
+                 "63",
+                 "59",
+                 "59"
                ]
              },
              {
@@ -630,10 +630,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "30",
-                 "20",
-                 "19"
+                 "36",
+                 "23",
+                 "15",
+                 "14"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 10:05:02 2018</p>
+         Last Run: Mon Nov 19 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -713,7 +713,7 @@
                         <td>62</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>NW</td>
+                        <td>WNW</td>
                         <td>50</td>
                      </tr>
                      <tr>
@@ -724,7 +724,7 @@
                         <td>3</td>
                         <td>59</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>48</td>
                      </tr>
