--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 12:05:02 2018</p>
+         Last Run: Mon Nov 19 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -31,37 +31,37 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>3</td>
-                        <td>68</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
                         <td>18</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>5</td>
-                        <td>70</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>2</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>16</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>3</td>
-                        <td>69</td>
+                        <td>2</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>13</td>
                      </tr>
                   </tbody>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-2",
                  "-3",
-                 "-4",
                  "-4"
                ]
              },
@@ -101,8 +101,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "1",
                  "0",
-                 "-1",
                  "-1"
                ]
              }
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "5",
-                 "3"
+                 "2",
+                 "2"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "70",
-                 "69"
+                 "65",
+                 "67",
+                 "67"
                ]
              },
              {
@@ -183,7 +183,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "18",
-                 "16",
+                 "15",
                  "13"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 12:05:02 2018</p>
+         Last Run: Mon Nov 19 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,14 +246,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>0</td>
                         <td>58</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>64</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -263,21 +263,21 @@
                         <td>0</td>
                         <td>60</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SSW</td>
-                        <td>63</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>1</td>
+                        <td>-3</td>
                         <td>0</td>
                         <td>62</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>62</td>
+                        <td>63</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,9 +304,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
                  "-2",
-                 "-2"
+                 "-2",
+                 "-3"
                ]
              },
              {
@@ -316,9 +316,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "3",
                  "2",
-                 "2"
+                 "2",
+                 "1"
                ]
              }
            ]
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "65",
                  "64",
-                 "63",
-                 "62"
+                 "63"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 12:05:02 2018</p>
+         Last Run: Mon Nov 19 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -461,50 +461,50 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
+                        <td>-2</td>
+                        <td>-5</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>66</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>NW</td>
-                        <td>39</td>
+                        <td>NNW</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>2</td>
-                        <td>64</td>
+                        <td>Partly Cloudy</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>1</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>E</td>
-                        <td>23</td>
+                        <td>NNW</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>60</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>ESE</td>
-                        <td>14</td>
+                        <td>-3</td>
+                        <td>1</td>
+                        <td>55</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>N</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>60</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>SE</td>
-                        <td>13</td>
+                        <td>-3</td>
+                        <td>1</td>
+                        <td>56</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>E</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -532,10 +532,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
-                 "-6",
+                 "-5",
                  "-4",
-                 "-4"
+                 "-3",
+                 "-3"
                ]
              },
              {
@@ -545,10 +545,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
                  "-2",
                  "-1",
-                 "-1"
+                 "0",
+                 "0"
                ]
              }
            ]
@@ -607,9 +607,9 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "2",
-                 "2",
-                 "2"
+                 "1",
+                 "1",
+                 "1"
                ]
              },
              {
@@ -618,10 +618,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "64",
+                 "66",
                  "60",
-                 "60"
+                 "55",
+                 "56"
                ]
              },
              {
@@ -630,10 +630,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "39",
-                 "23",
-                 "14",
-                 "13"
+                 "46",
+                 "44",
+                 "41",
+                 "33"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 12:05:02 2018</p>
+         Last Run: Mon Nov 19 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -696,37 +696,37 @@
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
-                        <td>-6</td>
-                        <td>2</td>
-                        <td>63</td>
+                        <td>-5</td>
+                        <td>7</td>
+                        <td>62</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>WNW</td>
-                        <td>50</td>
+                        <td>8</td>
+                        <td>NW</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>2</td>
+                        <td>7</td>
                         <td>59</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>WNW</td>
-                        <td>46</td>
+                        <td>NW</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>2</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>6</td>
                         <td>57</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>42</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,9 +753,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
+                 "-5",
                  "-4",
-                 "-3"
+                 "-4"
                ]
              },
              {
@@ -767,7 +767,7 @@
                "data":[
                  "-2",
                  "-1",
-                 "0"
+                 "-1"
                ]
              }
            ]
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "2"
+                 "7",
+                 "7",
+                 "6"
                ]
              },
              {
@@ -835,7 +835,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
+                 "62",
                  "59",
                  "57"
                ]
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "46",
-                 "42"
+                 "51",
+                 "48",
+                 "44"
                ]
              }
            ]
