--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 13:05:02 2018</p>
+         Last Run: Mon Nov 19 14:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>3</td>
-                        <td>65</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>-3</td>
+                        <td>3</td>
+                        <td>71</td>
+                        <td>0</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>18</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>2</td>
-                        <td>67</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>4</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>2</td>
-                        <td>67</td>
+                        <td>3</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>13</td>
+                        <td>WSW</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
                  "-3",
+                 "-4",
                  "-4"
                ]
              },
@@ -101,8 +101,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
                  "0",
+                 "-1",
                  "-1"
                ]
              }
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "2",
-                 "2"
+                 "4",
+                 "3"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "67",
-                 "67"
+                 "71",
+                 "72",
+                 "72"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
-                 "15",
-                 "13"
+                 "17",
+                 "14",
+                 "11"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 13:05:02 2018</p>
+         Last Run: Mon Nov 19 14:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,38 +246,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>3</td>
+                        <td>-1</td>
+                        <td>0</td>
+                        <td>56</td>
+                        <td>0</td>
+                        <td>16</td>
+                        <td>SSW</td>
+                        <td>78</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>0</td>
                         <td>58</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>65</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
-                        <td>0</td>
-                        <td>60</td>
-                        <td>0</td>
-                        <td>14</td>
-                        <td>SSW</td>
-                        <td>64</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>1</td>
-                        <td>-3</td>
-                        <td>0</td>
-                        <td>62</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>63</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,9 +304,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
-                 "-2",
-                 "-3"
+                 "-1",
+                 "-1",
+                 "-2"
                ]
              },
              {
@@ -316,9 +316,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
-                 "2",
-                 "1"
+                 "3",
+                 "3",
+                 "2"
                ]
              }
            ]
@@ -377,7 +377,7 @@
                "data":[
                  "0",
                  "0",
-                 "0"
+                 "1"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "56",
                  "58",
-                 "60",
-                 "62"
+                 "60"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "64",
-                 "63"
+                 "78",
+                 "70",
+                 "65"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 13:05:02 2018</p>
+         Last Run: Mon Nov 19 14:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -464,23 +464,23 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>NNW</td>
-                        <td>46</td>
+                        <td>NW</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>1</td>
-                        <td>60</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>NNW</td>
-                        <td>44</td>
+                        <td>NW</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -491,8 +491,8 @@
                         <td>55</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>N</td>
-                        <td>41</td>
+                        <td>NNE</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -500,7 +500,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
@@ -533,7 +533,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-4",
+                 "-3",
                  "-3",
                  "-3"
                ]
@@ -546,7 +546,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-1",
+                 "0",
                  "0",
                  "0"
                ]
@@ -618,10 +618,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "60",
+                 "65",
+                 "58",
                  "55",
-                 "56"
+                 "55"
                ]
              },
              {
@@ -630,9 +630,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
                  "44",
-                 "41",
+                 "43",
+                 "42",
                  "33"
                ]
              }
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 13:05:02 2018</p>
+         Last Run: Mon Nov 19 14:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -695,38 +695,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-5</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>7</td>
-                        <td>62</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>51</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>7</td>
-                        <td>59</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>48</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>6</td>
-                        <td>57</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>44</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,9 +753,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
                  "-4",
-                 "-4"
+                 "-3",
+                 "-2"
                ]
              },
              {
@@ -765,9 +765,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
                  "-1",
-                 "-1"
+                 "0",
+                 "1"
                ]
              }
            ]
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "59",
-                 "57"
+                 "58",
+                 "54",
+                 "51"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
-                 "48",
-                 "44"
+                 "57",
+                 "58",
+                 "58"
                ]
              }
            ]
