--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 14:05:06 2018</p>
+         Last Run: Mon Nov 19 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,19 +34,19 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>17</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>72</td>
+                        <td>5</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "4",
+                 "5",
                  "3"
                ]
              },
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "69",
                  "71",
-                 "72",
                  "72"
                ]
              },
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
+                 "16",
                  "14",
                  "11"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 14:05:06 2018</p>
+         Last Run: Mon Nov 19 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 14:05:06 2018</p>
+         Last Run: Mon Nov 19 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -476,7 +476,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NW</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>42</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -504,7 +504,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>33</td>
+                        <td>34</td>
                      </tr>
                   </tbody>
                </table>
@@ -619,7 +619,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "65",
-                 "58",
+                 "59",
                  "55",
                  "55"
                ]
@@ -632,8 +632,8 @@
                "data":[
                  "44",
                  "43",
-                 "42",
-                 "33"
+                 "43",
+                 "34"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 14:05:06 2018</p>
+         Last Run: Mon Nov 19 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -698,15 +698,15 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>7</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>7</td>
@@ -714,11 +714,11 @@
                         <td>1</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>58</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>6</td>
@@ -726,7 +726,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>58</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -835,7 +835,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
+                 "57",
                  "54",
                  "51"
                ]
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
                  "58",
-                 "58"
+                 "60",
+                 "60"
                ]
              }
            ]
