--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 15:05:02 2018</p>
+         Last Run: Mon Nov 19 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>3</td>
+                        <td>1</td>
                         <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>16</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>5</td>
-                        <td>71</td>
+                        <td>2</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>3</td>
-                        <td>72</td>
+                        <td>2</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>11</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "5",
-                 "3"
+                 "1",
+                 "2",
+                 "2"
                ]
              },
              {
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "69",
-                 "71",
-                 "72"
+                 "70",
+                 "71"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
-                 "14",
-                 "11"
+                 "19",
+                 "15",
+                 "12"
                ]
              }
            ]
@@ -219,12 +219,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 15:05:02 2018</p>
+         Last Run: Mon Nov 19 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,21 +250,21 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>0</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SSW</td>
                         <td>78</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>0</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SSW</td>
                         <td>70</td>
                      </tr>
@@ -273,7 +274,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>60</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
@@ -305,7 +306,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-1",
-                 "-1",
+                 "-2",
                  "-2"
                ]
              },
@@ -317,7 +318,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "3",
-                 "3",
+                 "2",
                  "2"
                ]
              }
@@ -386,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "58",
-                 "60"
+                 "57",
+                 "59",
+                 "62"
                ]
              },
              {
@@ -439,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 15:05:02 2018</p>
+         Last Run: Mon Nov 19 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -492,7 +493,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>43</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -504,7 +505,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>34</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -632,8 +633,8 @@
                "data":[
                  "44",
                  "43",
-                 "43",
-                 "34"
+                 "42",
+                 "33"
                ]
              }
            ]
@@ -673,7 +674,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 15:05:02 2018</p>
+         Last Run: Mon Nov 19 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -702,11 +703,11 @@
                         <td>1</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>58</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>7</td>
@@ -714,19 +715,19 @@
                         <td>1</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>60</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>Partly Cloudy</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>6</td>
                         <td>51</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>60</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -755,7 +756,7 @@
                "data":[
                  "-4",
                  "-3",
-                 "-2"
+                 "-3"
                ]
              },
              {
@@ -767,7 +768,7 @@
                "data":[
                  "-1",
                  "0",
-                 "1"
+                 "0"
                ]
              }
            ]
@@ -846,9 +847,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "57",
                  "58",
-                 "60",
-                 "60"
+                 "58"
                ]
              }
            ]
